[chore] application.properties 수정
utf-8로 데이터 전달하도록 수정

--- a/back-end/eip/src/main/resources/application.properties
+++ b/back-end/eip/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=eip
 spring.profiles.active = secret
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
